# twitter-discord-watchdog

./: .gitignore  Cargo.toml  LICENSE
src/: discord.rs  main.rs
