[package]
name = "twitter-discord-watchdog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default_features = false, default-features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
] }

tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
